--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDiale
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # configuration flyway
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
