--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/perpus?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bootcamp?createDatabaseIfNotExist=true
 spring.datasource.password=bootcamp
 spring.datasource.username=bootcamp_2019
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
