--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bootcamp?createDatabaseIfNotEx
 spring.datasource.password=bootcamp
 spring.datasource.username=bootcamp_2019
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.main.allow-bean-definition-overriding=true
 # jpa
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
